--- a/dotenv_files/.env
+++ b/dotenv_files/.env
@@ -7,9 +7,9 @@ ALLOWED_HOSTS="127.0.0.1,0.0.0.0,localhost"
 UID=1000
 GID=1000
 
-DB_ENGINE="django.db.backends.postgresql"
+DB_ENGINE="django.contrib.gis.db.backends.postgis"
 POSTGRES_DB="GeoFarmHub"
-POSTGRES_USER="GeoFarmHub_user"
+POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="GeoFarmHub_password"
 POSTGRES_HOST="psql"
 POSTGRES_PORT="5432"
