--- a/djangoapp/requirements.txt
+++ b/djangoapp/requirements.txt
@@ -12,7 +12,7 @@ Pillow #for imagens in database
 requests
 requests-oauthlib
 ngrok
-whitenoise #pra que mesmo? 
+whitenoise #debug 404 
 
 autobahn>=22.3 #for debug sql
 django-extensions>=3.2.3,<3.3 #for debug sql
@@ -20,6 +20,7 @@ setuptools>=65.5.0,<65.6 #for debug sql
 MarkupSafe>=3.0.1,<3.1 #for debug sql
 typing_extensions>=4.12.2,<4.13 #for debug sql
 Werkzeug>=3.0.4,<3.1 #Werkzeug is a comprehensive WSGI web application library. 
+GDAL==3.6.4
 
 
 djangorestframework #permite criar APIs RESTful no Django de forma fácil e estruturada.
