added more informations

--- a/Dockerfile.django
+++ b/Dockerfile.django
@@ -1,65 +1,53 @@
-FROM osgeo/gdal:alpine-small-3.6.3
+FROM python:3.11.3-alpine3.18
 
-# Evita gerar arquivos .pyc e melhora os logs
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
+# This environment variable is used to control whether Python should
+# write bytecode (.pyc) files to disk. 1 = No, 0 = Yes
+ENV PYTHONDONTWRITEBYTECODE 1
 
-# Atualiza o sistema e instala dependências necessárias
-RUN apk update && apk add --no-cache \
-    python3 \
-    python3-dev \
-    py3-pip \
-    postgresql-client \
-    postgresql-dev \
-    postgis \
-    geos-dev \
-    proj-dev \
-    sqlite-dev \
-    build-base \
-    gcc \
-    g++ \
-    musl-dev \
-    libffi-dev \
-    jpeg-dev \
-    zlib-dev \
-    freetype-dev
+# Specifies that Python output will be displayed immediately on the console or other output devices, without being buffered.
+# In short, you will see Python output in real time.
+ENV PYTHONUNBUFFERED 1
 
-# Cria um link simbólico para garantir que 'python' aponte para python3
-RUN ln -sf python3 /usr/bin/python
+# Copy the "djangoapp" and "scripts" folders into the container.
+COPY djangoapp /djangoapp
+COPY scripts /scripts
 
-# Define o diretório de trabalho
+# Copy the data/web/media folder to /data/web/media
+# (Adjust if the real folder on the host is "data/web/media")
+# COPY data/web/media /data/web/media
+
+# Enter the djangoapp folder in the container
 WORKDIR /djangoapp
 
-# Copia o requirements.txt para aproveitar o cache do Docker
-COPY djangoapp/requirements.txt /djangoapp/requirements.txt
+# Port 8000 will be available for external connections to the container
+# This is the port we will use for Django.
+EXPOSE 8000
 
-# Cria um ambiente virtual e instala as dependências Python
+# Install Python dependencies
 RUN python -m venv /venv && \
     /venv/bin/pip install --upgrade pip && \
     /venv/bin/pip install -r /djangoapp/requirements.txt
 
-# Copia o restante do código da aplicação e scripts
-COPY djangoapp /djangoapp
-COPY scripts /scripts
+# RUN executes commands in a shell inside the container to build the image.
+# The result of running the command is stored in the image's file system as a new layer.
+# Grouping the commands into a single RUN can reduce the number of layers in the image and make it more efficient.
+RUN adduser --disabled-password --no-create-home duser && \
+    mkdir -p /data/web/static && \
+    mkdir -p /data/web/media && \
+    chown -R duser:duser /venv && \
+    chown -R duser:duser /data/web/static && \
+    chown -R duser:duser /data/web/media && \
+    chmod -R 755 /data/web/static && \
+    chmod -R 755 /data/web/media && \ 
+    chown -R 1000:1000 /data/web/static && \ 
+    chown -R 1000:1000 /data/web/media && \ 
+    chmod -R +x /scripts
 
-# Dá permissão de execução ao script de inicialização
-RUN chmod +x /scripts/commands.sh
+# Add the scripts and venv/bin folders to the container's $PATH.
+ENV PATH="/scripts:/venv/bin:$PATH" 
 
-# Cria um usuário não-root e ajusta as permissões necessárias
-RUN adduser -D duser && \
-    mkdir -p /data/web/static /data/web/media && \
-    chown -R duser:duser /venv /data/web/static /data/web/media && \
-    chmod -R 755 /data/web/static /data/web/media
-
-# Define variáveis de ambiente para as bibliotecas GIS
-ENV GEOS_LIBRARY_PATH=/usr/lib/libgeos_c.so
-ENV GDAL_LIBRARY_PATH=/usr/lib/libgdal.so
-
-# Adiciona os diretórios dos scripts e do venv ao PATH
-ENV PATH="/scripts:/venv/bin:$PATH"
-
-# Altera o usuário para não rodar como root
+# Change the user to duser
 USER duser
 
-# Comando de inicialização
-CMD ["sh", "/scripts/commands.sh"]
+# Run the scripts/commands.sh file
+CMD ["commands.sh"]
