--- a/Dockerfile.django
+++ b/Dockerfile.django
@@ -1,10 +1,9 @@
 FROM osgeo/gdal:alpine-small-3.6.3
 
-# Evita gerar arquivos .pyc e melhora os logs
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
-# Atualiza o sistema e instala dependências necessárias
+# Instala dependências
 RUN apk update && apk add --no-cache \
     python3 \
     python3-dev \
@@ -24,42 +23,38 @@ RUN apk update && apk add --no-cache \
     zlib-dev \
     freetype-dev
 
-# Cria um link simbólico para garantir que 'python' aponte para python3
 RUN ln -sf python3 /usr/bin/python
 
-# Define o diretório de trabalho
+# Cria usuário e define permissões ANTES de chamar chown
+RUN adduser -D duser
+
+# Cria diretórios de trabalho e ajusta permissões
+RUN mkdir -p /data/web/static/js /data/web/media && \
+    chown -R duser:duser /data/web/static /data/web/media && \
+    chmod -R 755 /data/web/static /data/web/media
+
 WORKDIR /djangoapp
 
-# Copia o requirements.txt para aproveitar o cache do Docker
+# Copia requirements e instala dependências no venv
 COPY djangoapp/requirements.txt /djangoapp/requirements.txt
-
-# Cria um ambiente virtual e instala as dependências Python
 RUN python -m venv /venv && \
     /venv/bin/pip install --upgrade pip && \
     /venv/bin/pip install -r /djangoapp/requirements.txt
 
-# Copia o restante do código da aplicação e scripts
+# Copia código da aplicação e scripts
 COPY djangoapp /djangoapp
 COPY scripts /scripts
 
-# Dá permissão de execução ao script de inicialização
 RUN chmod +x /scripts/commands.sh
 
-# Cria um usuário não-root e ajusta as permissões necessárias
-RUN adduser -D duser && \
-    mkdir -p /data/web/static /data/web/media && \
-    chown -R duser:duser /venv /data/web/static /data/web/media && \
-    chmod -R 755 /data/web/static /data/web/media
-
-# Define variáveis de ambiente para as bibliotecas GIS
+# Ajusta variáveis GIS
 ENV GEOS_LIBRARY_PATH=/usr/lib/libgeos_c.so
 ENV GDAL_LIBRARY_PATH=/usr/lib/libgdal.so
 
-# Adiciona os diretórios dos scripts e do venv ao PATH
+# Adiciona venv e scripts ao PATH
 ENV PATH="/scripts:/venv/bin:$PATH"
 
-# Altera o usuário para não rodar como root
+# Muda para o usuário não-root
 USER duser
 
-# Comando de inicialização
 CMD ["sh", "/scripts/commands.sh"]
